# test

./: Cargo.toml  Readme.md
assets/: locale.txt
src/: lib.rs  locale.rs  main.rs
