[package]
name = "tmoe"
version = "0.0.1"
edition = "2018"
authors = ["2moe <25324935+2moe@users.noreply.github.com>"]
description = "This is a project in development and is for testing only."
license-file = "licenses/tmoe/gpl-2.0-or-later.txt"
repository = "https://github.com/2moe/tmoe"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = 3

[dependencies]
cursive = "0.16.3"
# cursive = { git = "https://github.com/gyscos/cursive" }
# rand = "0.8.4"
lazy_static = "1.4.0"
